# Jiling

./: .gitignore  README.md  eslint.config.mjs  package-lock.json  package.json  pnpm-lock.yaml
docs/: acp_architecture.md  acp_protocol.md  acp_protocol_integration.md  evolution_blueprint.md  im_gateway_architecture.md  imacp_gateway_design.md  shell_core_collaboration_design.md
public/gemini-live-self-test/: ask.pcm  remember.pcm
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: app_icon.icns  icon.icns
src-tauri/src/: acp.rs  commands.rs  db.rs  lib.rs  wechat.rs
src-tauri/src/acp/: auth.rs  discovery.rs  manager.rs  mod.rs  provider.rs  tests.rs  types.rs  utils.rs
src-tauri/weixin-gateway/: index.ts  package.json  pnpm-lock.yaml
src/app/: globals.css  layout.tsx  page.tsx
src/components/: AuraRenderer.tsx  ControlBar.tsx  ProviderConfigModal.tsx  SettingsModal.tsx  SmartOrb.tsx  TaskOutputOverlay.tsx  TaskSidePanel.tsx  TranscriptOverlay.tsx  WechatLoginModal.tsx
src/components/aura-ui/: ApprovalCard.tsx  CanvasCard.tsx  ChartCard.tsx  CodeReviewCard.tsx  NoteCard.tsx  TaskListCard.tsx  index.tsx
src/lib/: agent-provider.ts  audio-streamer.ts  gemini-live-self-test.ts  gemini-live.ts
src/lib/providers/: acp-provider.ts
