[package]
name = "jiling"
version = "0.1.0"
description = "机灵 (Jiling) - AI Voice Agent"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.0", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
base64 = "0.22"
dotenvy = "0.15"
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }
agent-client-protocol = "0.11.1"
agent-client-protocol-tokio = "0.11.1"
ed25519-dalek = { version = "2.2", features = ["pkcs8", "pem"] }
pkcs8 = "0.10"
hex = "0.4"
rand = "0.8"
